--- a/index.html
+++ b/index.html
@@ -2,10 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keepable</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Document</title>
   </head>
-  <body>
-    <!-- Happy coding -->
+  <body class="">
+    <header class="">
+      <h1>Codeable</h1>
+    </header>
+    <aside class="">
+      <nav>
+        <ul>
+          <li>
+            <a href="./notes.html">Notes</a>
+          </li>
+          <li>
+            <a href="#">Trash</a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
+    <main id="root" class="debug">
+      <form class="debug">
+        <input
+          type="text"
+          id="title-input"
+          placeholder="The title for my new note"
+        />
+        <textarea
+          name="body"
+          class=""
+          id="body"
+          placeholder="This is the body for the note."
+        ></textarea>
+        <div class="actionsButtons">
+          <input type="color" />
+          <button type="submit">Keep it!</button>
+        </div>
+      </form>
+
+      <div class="containerNotes debug"></div>
+    </main>
+    <script src="./main.js"></script>
   </body>
 </html>
