method color done

--- a/trashNotes.html
+++ b/trashNotes.html
@@ -24,26 +24,10 @@
       </nav>
     </aside>
     <main id="root" class="">
-      <form class="">
-        <input
-          type="text"
-          id="title-input"
-          placeholder="The title for my new note"
-        />
-        <textarea
-          name="body"
-          class=""
-          id="body"
-          placeholder="This is the body for the note."
-        ></textarea>
-        <div class="actionsButtons">
-          <input type="color" />
-          <button type="submit">Keep it!</button>
-        </div>
-      </form>
-
-      <div class="containerNotes"></div>
+      <h5>trash notes</h5>
+      <div class="containerTrash"></div>
     </main>
     <script src="./main.js"></script>
+    <script src="./trash.js"></script>
   </body>
 </html>
