--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           placeholder="This is the body for the note."
         ></textarea>
         <div class="actionsButtons">
-          <input type="color" />
+          <input type="button" value="color" />
           <button type="submit">Keep it!</button>
         </div>
       </form>
