--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@
           placeholder="This is the body for the note."
         ></textarea>
         <div class="actionsButtons">
-          <input type="button" value="color" />
+          <select name="" id="">
+            <option value="#FFFF" class="FFFF"></option>
+            <option value="#F28B82" class="F28B82"></option>
+            <option value="#FBBC04" class="FBBC04"></option>
+            <option value="#CCFF90" class="CCFF90"></option>
+            <option value="#A7FFEB" class="A7FFEB"></option>
+            <option value="#CBF0F8" class="CBF0F8"></option>
+            <option value="#AECBFA" class="AECBFA"></option>
+            <option value="#D7AEFB" class="D7AEFB"></option>
+            <option value="#FDCFE8" class="FDCFE8"></option>
+            <option value="#FBBC04" class="FBBC04"></option>
+          </select>
           <button type="submit">Keep it!</button>
         </div>
       </form>
